--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -7,5 +7,25 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="Desc" parent="Base.TextAppearance.AppCompat.Body1">
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginRight">30dp</item>
+        <item name="android:layout_marginEnd" tools:targetApi="jelly_bean_mr1">30dp</item>
+        <item name="android:layout_marginStart" tools:targetApi="jelly_bean_mr1">30dp</item>
+    </style>
+    <style name="Margin" parent="Base.TextAppearance.AppCompat.Body2">
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginStart" tools:targetApi="jelly_bean_mr1">30dp</item>
+        <item name="android:layout_marginRight">30dp</item>
+        <item name="android:layout_marginEnd" tools:targetApi="jelly_bean_mr1">30dp</item>
+        <item name="android:drawablePadding">5dp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+    <style name="GroupTitle" parent="Base.TextAppearance.AppCompat.Headline">
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginStart" tools:targetApi="jelly_bean_mr1">30dp</item>
+        <item name="android:layout_marginTop">30dp</item>
+    </style>
 </resources>
